Fix uneven input prompt width for markdown cells

--- a/notebook/static/notebook/less/codecell.less
+++ b/notebook/static/notebook/less/codecell.less
@@ -46,7 +46,7 @@ div.run_this_cell {
     width: 1ex;
 }
 
-div.code_cell div.input_prompt {
+div.input_prompt {
     min-width: 15ex;
 }
 
